syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.model;

import "model/model.proto";
import "model/model_version.proto";
// this line is used by starport scaffolding # proto/tx/import

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/model/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateModel(MsgCreateModel) returns (MsgCreateModelResponse);
  rpc UpdateModel(MsgUpdateModel) returns (MsgUpdateModelResponse);
  rpc DeleteModel(MsgDeleteModel) returns (MsgDeleteModelResponse);
  rpc CreateModelVersion(MsgCreateModelVersion) returns (MsgCreateModelVersionResponse);
  rpc UpdateModelVersion(MsgUpdateModelVersion) returns (MsgUpdateModelVersionResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateModel {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int32 vid = 2;
  int32 pid = 3;

  int32 device_type_id = 4;
  string product_name = 5;
  string product_label = 6;
  string part_number = 7;
  int32 commissioning_custom_flow = 8;
  string commissioning_custom_flow_url = 9;
  uint64 commissioning_mode_initial_steps_hint = 10;
  string commissioning_mode_initial_steps_instruction = 11;
  uint64 commissioning_mode_secondary_steps_hint = 12;
  string commissioning_mode_secondary_steps_instruction = 13;
  string user_manual_url = 14;
  string support_url = 15;
  string product_url = 16;
}
message MsgCreateModelResponse {}

message MsgUpdateModel {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int32 vid = 2;
  int32 pid = 3;

  string product_name = 4;
  string product_label = 5;
  string part_number = 6;
  string commissioning_custom_flow_url = 7;
  string commissioning_mode_initial_steps_instruction = 8;
  string commissioning_mode_secondary_steps_instruction = 9;
  string user_manual_url = 10;
  string support_url = 11;
  string product_url = 12;
}
message MsgUpdateModelResponse {}

message MsgDeleteModel {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int32 vid = 2;
  int32 pid = 3;
}
message MsgDeleteModelResponse {}

message MsgCreateModelVersion {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int32 vid = 2;
  int32 pid = 3;
  uint64 software_version = 4;

  string software_version_string = 5;
  int32 cd_version_number = 6;
  string firmware_digests = 7;
  bool software_version_valid = 8;
  string ota_url = 9;
  uint64 ota_file_size = 10;
  string ota_checksum = 11;
  int32 ota_checksum_type = 12;
  uint64 min_applicable_software_version = 13;
  uint64 max_applicable_software_version = 14;
  string release_notes_url = 15;
}
message MsgCreateModelVersionResponse {}

message MsgUpdateModelVersion {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int32 vid = 2;
  int32 pid = 3;
  uint64 software_version = 4;

  bool software_version_valid = 5;
  string ota_url = 6;
  uint64 min_applicable_software_version = 7;
  uint64 max_applicable_software_version = 8;
  string release_notes_url = 9;
}
message MsgUpdateModelVersionResponse {}

// this line is used by starport scaffolding # proto/tx/message